--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>single page app</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="data-spm" content="a1z1d1">
+    <meta name="data-spm" content="a2a1v">
     <meta name="aplus-no-track" content="1" />
     <meta name="aplus-ajax" content="1554667">
     <meta name="aplus-waiting" content="MAN">
@@ -55,7 +55,7 @@
     // });
     var obj = {
         '#/a': {
-            spmb: '9187143',
+            spmb: '12981188',
             name: 'spa_pagea',
             checksum: '46836988'
         },
@@ -80,7 +80,7 @@
         var q1 = (window.goldlog_queue || (window.goldlog_queue = []));
         q1.push({
             action: 'goldlog.setPageSPM',
-            arguments: ['a1z1d1', spmInfor.spmb]
+            arguments: ['a2a1v', spmInfor.spmb]
         });
         q1.push({
             action: 'goldlog.sendPV',
@@ -89,7 +89,7 @@
                 checksum: spmInfor.checksum // checksum需要申请
             }]
         });
-        document.getElementById('page_detail').innerText = 'spm: a1z1d1.' + spmInfor.spmb;
+        document.getElementById('page_detail').innerText = 'spm: a2a1v.' + spmInfor.spmb;
         var btn_els = document.getElementsByTagName('button');
         for (var i = 0; i < btn_els.length; i++) {
             var _cls = btn_els[i].getAttribute('class');
@@ -119,7 +119,7 @@
     </script>
 </head>
 
-<body data-spm="9187143">
+<body data-spm="12981188">
     <script>
     with(document) with(body) with(insertBefore(createElement("script"), firstChild)) setAttribute("exparams", "category=&userid=&aplus&task_test=1&udpid=&&yunid=&&trid=0b88601515603367119967252eb115&asid=AQAAAABI2QBdbXltfwAAAABnvtPfLhiGJA==&sidx=0", id = "beacon-aplus", src = (location > "https" ? "//g" : "//g") + ".alicdn.com/alilog/mlog/aplus_v2.js?_t=20180125")
     </script>
@@ -159,14 +159,14 @@
 
     1、hashChange 发pv 验证spm流转
 
-    hashChange1、起始页 http://aplus.ju.taobao.com/assets/testPages/aplus_v2/spa_a 9187143
+    hashChange1、起始页 http://aplus.ju.taobao.com/assets/testPages/aplus_v2/spa_a 12981188
     hashChange2、中间页 http://aplus.ju.taobao.com/assets/testPages/aplus_v2/spa_b 9187152
     hashChange3、last页 http://aplus.ju.taobao.com/assets/testPages/aplus_v2/spa_c 9187229
     在明细层验证：page2、page3里面的spm-url和spm-pre 指标监控：验证11个浏览指标
 
     2、historyChange 发pv 验证spm流转
 
-    page1、起始页 http://aplus.ju.taobao.com/assets/testPages/aplus_v2/spa_a 9187143
+    page1、起始页 http://aplus.ju.taobao.com/assets/testPages/aplus_v2/spa_a 12981188
     page2、中间页 http://aplus.ju.taobao.com/assets/testPages/aplus_v2/spa_b 9187152
     page3、last页 http://aplus.ju.taobao.com/assets/testPages/aplus_v2/spa_c 9187229
     在明细层验证：page2、page3里面的spm-url和spm-pre 指标监控：验证11个浏览指标
