--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
         action: 'goldlog.on',
         arguments: [window, 'hashchange', function(e) {
             spmInfor = obj[getHash()];
-            //sendPV(spmInfor)
+            sendPV(spmInfor)
         }]
     });
 
